[package]
name = "imgfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive", "wrap_help"] }
image = "0.24.5"
thiserror = "1.0.37"
uncased = "0.9.7" # see also unicase; doubtful that we need case folding here
